confirmation page and file structure changes

--- a/public/checkout.html
+++ b/public/checkout.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>FRESHN - Checkout</title>
-    <script src="js/modules/CheckoutManager.js"></script>
+    <script src="js/checkout.js"></script>
     <link rel="stylesheet" href="css/checkout.css">
 </head>
 <body>
