restructuring of cart module, disabled buttons for empty cart / out of stock products and clear shopping cart butoon added

--- a/public/checkout.html
+++ b/public/checkout.html
@@ -14,38 +14,40 @@
 <div class="checkout-content">
     <!-- Form Section -->
     <div class="form-section">
-        <label for="email">Contact Information</label>
-        <input type="email" id="email" placeholder="Email" required>
-        <input type="text" id="mobile" placeholder="Mobile number" required>
+        <form id="checkout-form">
+            <label for="email">Contact Information</label>
+            <input type="email" id="email" placeholder="Email" required>
+            <input type="text" id="mobile" placeholder="Mobile number" required>
 
-        <label>Personal details</label>
-        <div class="inline-fields">
-            <input type="text" id="first-name" placeholder="First Name" required>
-            <input type="text" id="last-name" placeholder="Last Name" required>
-        </div>
+            <label>Personal details</label>
+            <div class="inline-fields">
+                <input type="text" id="first-name" placeholder="First Name" required>
+                <input type="text" id="last-name" placeholder="Last Name" required>
+            </div>
 
-        <input type="text" id="street" placeholder="House number and street" required>
-        <input type="text" id="additional-information" placeholder="Apartment/Suite">
+            <input type="text" id="street" placeholder="House number and street" required>
+            <input type="text" id="additional-information" placeholder="Apartment/Suite">
 
-        <div class="inline-fields">
-            <input type="number" id="area-code" placeholder="Post Code" required>
-            <select id="state" required>
-                <option value="act">ACT</option>
-                <option value="nsw">NSW</option>
-                <option value="nt">NT</option>
-                <option value="qld">QLD</option>
-                <option value="sa">SA</option>
-                <option value="tas">TAS</option>
-                <option value="vic">VIC</option>
-                <option value="wa">WA</option>
-                <option value="others">Others</option>
-            </select>
-        </div>
+            <div class="inline-fields">
+                <input type="number" id="area-code" placeholder="Post Code" required>
+                <select id="state" required>
+                    <option value="act">ACT</option>
+                    <option value="nsw">NSW</option>
+                    <option value="nt">NT</option>
+                    <option value="qld">QLD</option>
+                    <option value="sa">SA</option>
+                    <option value="tas">TAS</option>
+                    <option value="vic">VIC</option>
+                    <option value="wa">WA</option>
+                    <option value="others">Others</option>
+                </select>
+            </div>
 
-        <label>Payment details</label>
-        <p>Please note that we currently only accept payment on account. You will receive an email with payment details after placing your order.</p>
+            <label>Payment details</label>
+            <p>Please note that we currently only accept payment on account. You will receive an email with payment details after placing your order.</p>
 
-        <button id="submit-order" disabled>Submit order</button>
+            <button id="submit-order" disabled>Submit order</button>
+        </form>
     </div>
 
     <!-- Cart Section -->
