--- a/public/index.html
+++ b/public/index.html
@@ -12,16 +12,17 @@
 <header>
     <div class="logo"><a id="home" href="#"><img src="images/freshn_logo.png" alt="Company Logo"></a></div>
     <div class="search-container">
-        <input type="text" class="search-input" placeholder="Search...">
+        <input type="text" class="search-input" placeholder="Search Products">
         <button class="search-button">
             <img src="images/search_icon.png" alt="Search">
         </button>
     </div>
     <div class="shopping-cart"><a href="#"><img src="images/cart_icon.png" alt="Shopping Cart"></a></div>
     <div id="shopping-cart" class="cart-hidden">
-        <h2>Shopping Basket</h2>
+        <h2>Shopping Cart</h2>
         <ul id="cart-items"></ul>
-        <button id="checkout">Checkout</button>
+        <button id="clear-cart-button" class="clear-cart-button">Clear Cart</button>
+        <button id="checkout-button" class="checkout-button">Checkout</button>
     </div>
 </header>
 
