added confirmation page

--- a/public/confirmation.html
+++ b/public/confirmation.html
@@ -12,7 +12,9 @@
     <div class="return"><a href="index.html">⏎ Return to store</a></div>
 </header>
 <div class="confirmation-content">
-
+    <h3>Thank you for your order!</h3>
+    <p>A confirmation email has been sent.</p>
+    <a href="index.html">⏎ Return to store</a>
 </div>
 </body>
 </html>
