--- a/public/checkout.html
+++ b/public/checkout.html
@@ -16,21 +16,22 @@
     <div class="form-section">
         <form id="checkout-form">
             <label for="email">Contact Information</label>
-            <input type="email" id="email" placeholder="Email" required>
-            <input type="text" id="mobile" placeholder="Mobile number" required>
+            <input type="email" id="email" placeholder="Email *" required>
+            <input type="text" id="mobile" placeholder="Mobile number *" required>
 
             <label>Personal details</label>
             <div class="inline-fields">
-                <input type="text" id="first-name" placeholder="First Name" required>
-                <input type="text" id="last-name" placeholder="Last Name" required>
+                <input type="text" id="first-name" placeholder="First Name *" required>
+                <input type="text" id="last-name" placeholder="Last Name *" required>
             </div>
 
-            <input type="text" id="street" placeholder="House number and street" required>
+            <input type="text" id="street" placeholder="House number and street *" required>
             <input type="text" id="additional-information" placeholder="Apartment/Suite">
 
             <div class="inline-fields">
-                <input type="number" id="area-code" placeholder="Post Code" required>
+                <input type="number" id="area-code" placeholder="Post Code*" required>
                 <select id="state" required>
+                    <option value="" disabled selected>Select your state *</option>
                     <option value="act">ACT</option>
                     <option value="nsw">NSW</option>
                     <option value="nt">NT</option>
@@ -46,17 +47,17 @@
             <label>Payment details</label>
             <p>Please note that we currently only accept payment on account. You will receive an email with payment details after placing your order.</p>
 
-            <button id="submit-order" disabled>Submit order</button>
+            <button id="submit-order">Submit order</button>
         </form>
     </div>
 
     <!-- Cart Section -->
     <div id="cart-section" class="cart-container">
         <h2>Your Cart</h2>
+        <p>Total: <span id="checkout-total"></span></p>
         <ul id="checkout-items">
             <!-- Cart items will be dynamically populated here by checkout.js -->
         </ul>
-        <p>Total: <span id="checkout-total"></span></p>
     </div>
 </div>
 </body>
